--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,6 +1,15 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+:root {
+  --color-blue-500: oklch(0.379 0.146 265.522);
+}
+
+@theme {
+  --font-sans: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  --ui-text: #000000;
+}
+
 html, body, #__nuxt, #__nuxt > div, #__layout {
 	width: 100%;
 	min-height: 100vh;
