--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,11 +1,16 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+:root {
+  --ui-color-neutral-700: #000;
+}
+
 @theme static {
   --font-sans: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   /*--ui-text: #000000;*/
-  --ui-color-neutral-700: #000;
+  /*--ui-color-neutral-700: #000; Move to root, otherwise the change is not applied */
 
+  --color-blue-400: oklch(80.9% 0.105 251.813);
   --color-blue-500: oklch(0.379 0.146 265.522);
 }
 
