Add v-calendar date picker

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -37,3 +37,16 @@ html, body, #__nuxt, #__nuxt > div, #__layout{
 html {
   font-size: 20px;
 }
+
+.vc-nk {
+  --vc-accent-50: var(--color-primary-50);
+  --vc-accent-100: var(--color-primary-100);
+  --vc-accent-200: var(--color-primary-200);
+  --vc-accent-300: var(--color-primary-300);
+  --vc-accent-400: var(--color-primary-400);
+  --vc-accent-500: var(--color-primary-500);
+  --vc-accent-600: var(--color-primary-600);
+  --vc-accent-700: var(--color-primary-700);
+  --vc-accent-800: var(--color-primary-800);
+  --vc-accent-900: var(--color-primary-900);
+}
